--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,92 @@
-.App {
-  text-align: center;
+body {
+  background-image: url("../public/images/mbr-1920x1256.jpg");
+  background-attachment: fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  min-height: 100%;
+  
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+html {
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  box-sizing: border-box;
   color: white;
+  
 }
 
-.App-link {
-  color: #61dafb;
+*,
+*::before,
+*::after {
+  margin: 0 auto;
+  padding: 0;
+  box-sizing: inherit;
+  line-height: 1.3;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1,
+h2,
+h4,
+h5,
+h6 {
+  padding: 0.2em 1rem;
+  
+}
+
+p {
+  margin: 0 1em 0.5em 1em;
+}
+div {
+  margin-left: 20%;
+  margin-right: 20%;
+  text-align: center;
+  
+}
+ol,
+ul {
+  margin: 0em 1rem;
+}
+
+li {
+  list-style-position: inside;
+  
+}
+
+button {
+  font-weight: bold;
+  padding: 0.2em;
+  margin: 0.2em;
+  border: 1px solid white;
+  border-radius: 0.3em;
+  background-color: white;
+}
+
+a {
+  margin: 0.2em;
+  text-decoration: none;
+  font-weight: bold;
+  color: inherit;
+}
+input {
+  background-color: white;
+}
+.button {
+  font-weight: bold;
+  padding: 0.2em;
+  margin: 0.2em;
+  border: 1px solid white;
+  border-radius: 0.3em;
+  background-color: white;
+}
+.error {
+  display:block;
+  background-color: red;
+  color: black;
+  text-align: left;
+  font-family:Verdana, Geneva, Tahoma, sans-serif,;
+  font-weight: bold;
+  border-radius: 10px;
+  border-style: double;
+  border-color: white;
 }
