--- a/src/components/MovieList/movieList.module.css
+++ b/src/components/MovieList/movieList.module.css
@@ -21,3 +21,9 @@ li button {
     margin-bottom: 20px;
 
 }
+.movie-list ul span {
+    font-size: 50px;
+    color:red;
+    font-weight: bolder;
+    background-color: black;
+}
